<resources>
    <string name="app_name">My Application</string>
    <string name="breakfast">Breakfast</string>
    <string name="snack">Snack</string>
    <string name="lunch">Lunch</string>
    <string name="snack2">Snack</string>
    <string name="snack1">snack</string>
    <string name="dinner">Dinner</string>
    <string name="view">View</string>
    <string name="calories_gained_today">Calories gained today:</string>
    <string name="textview">TextView</string>
    <string name="back">Back</string>
    <string name="calories_gained">Calories gained</string>
    <string name="view_window">View window</string>
    <string name="finish">Finish</string>
    <string name="drinks">Drinks</string>
    <string name="food">Food</string>
    <string name="add">Add</string>
</resources>