<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu"
    android:baselineAligned="false">

    <Button
        android:id="@+id/breakfast_am"
        android:layout_width="151dp"
        android:layout_height="64dp"
        android:text="@string/breakfast"
        app:layout_constraintBottom_toTopOf="@+id/view_am"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calories_am"
        app:layout_constraintVertical_bias="0.075" />

    <Button
        android:id="@+id/snack1_am"
        android:layout_width="151dp"
        android:layout_height="64dp"
        android:text="@string/snack1"
        app:layout_constraintEnd_toEndOf="@+id/breakfast_am"
        app:layout_constraintStart_toStartOf="@+id/breakfast_am"
        app:layout_constraintTop_toBottomOf="@+id/breakfast_am" />

    <Button
        android:id="@+id/lunch_am"
        android:layout_width="151dp"
        android:layout_height="64dp"
        android:text="@string/lunch"
        app:layout_constraintEnd_toEndOf="@+id/snack1_am"
        app:layout_constraintStart_toStartOf="@+id/snack1_am"
        app:layout_constraintTop_toBottomOf="@+id/snack1_am" />

    <Button
        android:id="@+id/snack2_am"
        android:layout_width="151dp"
        android:layout_height="64dp"
        android:text="@string/snack2"
        app:layout_constraintEnd_toEndOf="@+id/lunch_am"
        app:layout_constraintStart_toStartOf="@+id/lunch_am"
        app:layout_constraintTop_toBottomOf="@+id/lunch_am" />

    <Button
        android:id="@+id/dinner_am"
        android:layout_width="151dp"
        android:layout_height="64dp"
        android:layout_marginBottom="-160dp"
        android:text="@string/dinner"
        app:layout_constraintBottom_toTopOf="@+id/view_am"
        app:layout_constraintEnd_toEndOf="@+id/snack2_am"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/snack2_am"
        app:layout_constraintTop_toBottomOf="@+id/snack2_am" />

    <Button
        android:id="@+id/view_am"
        android:layout_width="151dp"
        android:layout_height="64dp"
        android:layout_marginTop="161dp"
        android:layout_marginBottom="60dp"
        android:text="@string/view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dinner_am" />


    <TextView
        android:id="@+id/calories_am"
        android:layout_width="331dp"
        android:layout_height="152dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/calories_gained_today"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <TextView
        android:id="@+id/date"
        android:layout_width="155dp"
        android:layout_height="64dp"
        android:gravity="center"
        android:text="@string/textview"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>